[tool.poetry]
name = "app"
version = "0.1.0"
description = "j"
authors = ["Joao Rocha <j4.computer@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
langchain-core = "^0.1.52"
httpx = "^0.27.0"
python-dotenv = "^0.19.1"
backoff = "^2.2.1"
transformers = "^4.40.1" 
groq = "^0.5.0"
python-multipart = "^0.0.5"
bitsandbytes = "^0.42.0"
langchain_community = "^0.0.38"
tiktoken = "^0.6.0"
langchainhub = "^0.1.15"
langchain = "^0.1.17"
langgraph  = "^0.0.48"
tavily-python = "^0.3.3"
langchain-groq = "^0.1.3"
bs4 = "^4.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
